list user from api
moved listing logic in user store

list users from api
