# adapters/api/json/user/presenters.go
@@ -9,8 +9,17 @@ import (
 	u "github.com/lejeunel/go-image-annotator/entities/user"
 	s "github.com/lejeunel/go-image-annotator/shared"
 	"github.com/lejeunel/go-image-annotator/use-cases/user/create"
+	"github.com/lejeunel/go-image-annotator/use-cases/user/list"
 	upd "github.com/lejeunel/go-image-annotator/use-cases/user/update-privileges"
 )
+
+func MakeUserResponse(user u.User) models.User {
+	return models.User{
+		Id:     user.Id,
+		Groups: user.GroupNames(),
+		Roles:  user.RoleNames(),
+	}
+}
 
 type Presenter struct {
 	Writer http.ResponseWriter
@@ -33,6 +42,18 @@ func (p Presenter) SuccessDeleteUser(id u.UserId) {
 
 func (p Presenter) SuccessUpdate(r upd.Response) {
 	p.Writer.WriteHeader(http.StatusNoContent)
+}
+
+func (p Presenter) SuccessListUsers(r list.Response) {
+	users := []models.User{}
+	for _, user := range r.Users {
+		users = append(users, MakeUserResponse(user))
+	}
+
+	s.WriteJSON(p.Writer, 200, models.ListUsers{
+		Users:      users,
+		Pagination: json.BuildPaginationResponse(r.Pagination),
+	})
 }
 
 func NewPresenter(w http.ResponseWriter, l slog.Logger) Presenter {
